--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -30,11 +30,11 @@ alert = #bd2c40
 [bar/chrisbar]
 monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 27
+height = 30
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 6.0
-fixed-center = false
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -51,13 +51,13 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
+font-0 = SF Pro Display:style=Regular:size=13
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
-modules-left = bspwm i3
-modules-center = 
-modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-left = i3
+modules-center = xwindow
+modules-right = filesystem pulseaudio memory cpu eth date powermenu
 
 tray-position = right
 tray-padding = 2
@@ -79,7 +79,7 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:30:...%
+label = %title:0:50:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -260,7 +260,7 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
+date = "%d %b %y"
 date-alt = " %Y-%m-%d"
 
 time = %H:%M
