--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -18,17 +18,17 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
+background = #cc222222
+background-alt = #cc444444
 ;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
+foreground = #ffffff
+foreground-alt = #ffffff
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/chrisbar]
-monitor = ${env:MONITOR:HDMI-1}
+[bar/mainbar]
+monitor = ${env:MONITOR:DP-0}
 width = 100%
 height = 30
 ;offset-x = 1%
@@ -52,8 +52,9 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = SF Pro Display:style=Regular:size=13
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+font-1 = "Font Awesome 5 Free:style=Regular:pixelsize=15;"
+font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=15;"
+font-3 = "Font Awesome 5 Brands:style=Regular:pixelsize=15;"
 
 modules-left = i3
 modules-center = xwindow
@@ -77,9 +78,14 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[bar/sidebar]
+inherit = bar/mainbar
+monitor = ${env:MONITOR:DVI-D-0}
+
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:50:...%
+label-foreground = ${colors.primary}
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -136,30 +142,30 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
 label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
-label-focused = %index%
+label-focused = %name%
 label-focused-background = ${module/bspwm.label-focused-background}
 label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %index%
+label-unfocused = %name%
 label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 
 ; visible = Active workspace on unfocused monitor
-label-visible = %index%
+label-visible = %name%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
-label-urgent = %index%
+label-urgent = %name%
 label-urgent-background = ${module/bspwm.label-urgent-background}
 label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
